2ffc5f0 Small spacing fixed

--- a/src/06-components/molecules/unique-link-list/unique-link-list.scss
+++ b/src/06-components/molecules/unique-link-list/unique-link-list.scss
@@ -49,7 +49,7 @@
         width: $M;
         height: $M;
         left: 0;
-        top: $XS;
+        top: 5px;
       }
     }
   }
